quick fix of the navbar for phone displaying and overlaping desktop display

--- a/screen-scaling/phone.css
+++ b/screen-scaling/phone.css
@@ -273,7 +273,7 @@
 
 @media screen and (min-width: 721px) {
 
-  .menu-iphone-under {
+  .menu-iphone-under-after {
     display: none;
   }
 
